add test for restore change

--- a/src/azure-cli/azure/cli/command_modules/rdbms/tests/latest/recordings/test_postgres_flexible_server_mgmt.yaml
+++ b/src/azure-cli/azure/cli/command_modules/rdbms/tests/latest/recordings/test_postgres_flexible_server_mgmt.yaml
@@ -3856,7 +3856,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --name --source-server --restore-time
+      - -g --name --source-server --restore-time --zone
       User-Agent:
       - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-rdbms/2020-02-14-privatepreview Azure-SDK-For-Python AZURECLI/2.17.1
@@ -3911,7 +3911,7 @@ interactions:
       Content-Type:
       - application/json; charset=utf-8
       ParameterSetName:
-      - -g --name --source-server --restore-time
+      - -g --name --source-server --restore-time --zone
       User-Agent:
       - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-rdbms/2020-02-14-privatepreview Azure-SDK-For-Python AZURECLI/2.17.1
@@ -3962,7 +3962,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --name --source-server --restore-time
+      - -g --name --source-server --restore-time --zone
       User-Agent:
       - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-rdbms/2020-02-14-privatepreview Azure-SDK-For-Python AZURECLI/2.17.1
@@ -4009,7 +4009,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --name --source-server --restore-time
+      - -g --name --source-server --restore-time --zone
       User-Agent:
       - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-rdbms/2020-02-14-privatepreview Azure-SDK-For-Python AZURECLI/2.17.1
@@ -4056,7 +4056,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --name --source-server --restore-time
+      - -g --name --source-server --restore-time --zone
       User-Agent:
       - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-rdbms/2020-02-14-privatepreview Azure-SDK-For-Python AZURECLI/2.17.1
@@ -4103,7 +4103,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --name --source-server --restore-time
+      - -g --name --source-server --restore-time --zone
       User-Agent:
       - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-rdbms/2020-02-14-privatepreview Azure-SDK-For-Python AZURECLI/2.17.1
@@ -4150,7 +4150,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --name --source-server --restore-time
+      - -g --name --source-server --restore-time --zone
       User-Agent:
       - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-rdbms/2020-02-14-privatepreview Azure-SDK-For-Python AZURECLI/2.17.1
@@ -4197,7 +4197,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --name --source-server --restore-time
+      - -g --name --source-server --restore-time --zone
       User-Agent:
       - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-rdbms/2020-02-14-privatepreview Azure-SDK-For-Python AZURECLI/2.17.1
@@ -4244,7 +4244,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --name --source-server --restore-time
+      - -g --name --source-server --restore-time --zone
       User-Agent:
       - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-rdbms/2020-02-14-privatepreview Azure-SDK-For-Python AZURECLI/2.17.1
@@ -4291,7 +4291,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --name --source-server --restore-time
+      - -g --name --source-server --restore-time --zone
       User-Agent:
       - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-rdbms/2020-02-14-privatepreview Azure-SDK-For-Python AZURECLI/2.17.1
@@ -4338,7 +4338,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --name --source-server --restore-time
+      - -g --name --source-server --restore-time --zone
       User-Agent:
       - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-rdbms/2020-02-14-privatepreview Azure-SDK-For-Python AZURECLI/2.17.1
@@ -4385,7 +4385,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --name --source-server --restore-time
+      - -g --name --source-server --restore-time --zone
       User-Agent:
       - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-rdbms/2020-02-14-privatepreview Azure-SDK-For-Python AZURECLI/2.17.1
@@ -4432,7 +4432,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --name --source-server --restore-time
+      - -g --name --source-server --restore-time --zone
       User-Agent:
       - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-rdbms/2020-02-14-privatepreview Azure-SDK-For-Python AZURECLI/2.17.1
@@ -4479,7 +4479,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --name --source-server --restore-time
+      - -g --name --source-server --restore-time --zone
       User-Agent:
       - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-rdbms/2020-02-14-privatepreview Azure-SDK-For-Python AZURECLI/2.17.1
@@ -4526,7 +4526,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --name --source-server --restore-time
+      - -g --name --source-server --restore-time --zone
       User-Agent:
       - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
         azure-mgmt-rdbms/2020-02-14-privatepreview Azure-SDK-For-Python AZURECLI/2.17.1
