--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,8 +1,8 @@
 # See for instructions on this file https://help.github.com/articles/about-codeowners/
 
-*help.py @msyyc @jiasli
-*help.yaml @msyyc @jiasli
-*help.yml @msyyc @jiasli
+*help.py @msyyc @jiasli @jsntcy
+*help.yaml @msyyc @jiasli @jsntcy
+*help.yml @msyyc @jiasli @jsntcy
 
 /linter_exclusions.yml @jsntcy @kairu-ms
 
