--- a/linter_exclusions.yml
+++ b/linter_exclusions.yml
@@ -695,6 +695,11 @@ backup protectable-item show:
     protectable_item_type:
       rule_exclusions:
       - option_length_too_long
+backup protectable-item list:
+  parameters:
+    protectable_item_type:
+      rule_exclusions:
+      - option_length_too_long
 backup protection auto-enable-for-azurewl:
   parameters:
     protectable_item_name:
