--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -43,6 +43,7 @@
 /src/azure-cli/azure/cli/command_modules/rdbms/ @arde0708 @Juliehzl @evelyn-ys
 /src/azure-cli/azure/cli/command_modules/resource/ @Juliehzl @zhoxing-ms
 /src/azure-cli/azure/cli/command_modules/role/ @jiasli @evelyn-ys @jsntcy @fengzhou-msft
+/src/azure-cli/azure/cli/command_modules/search/ @huangbolun @kairu-ms
 /src/azure-cli/azure/cli/command_modules/servicebus/ @v-ajnava @fengzhou-msft
 /src/azure-cli/azure/cli/command_modules/servicefabric/ @QingChenmsft @qwordy
 /src/azure-cli/azure/cli/command_modules/sql/ @jaredmoo @Juliehzl @evelyn-ys
