--- a/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
@@ -4,7 +4,7 @@ aks create:
       appgw_watch_namespace:
           rule_exclusions:
           - option_length_too_long
-      enable_sqxquotehelper:
+      enable_sgxquotehelper:
           rule_exclusions:
           - option_length_too_long
 aks enable-addons:
@@ -12,7 +12,7 @@ aks enable-addons:
       appgw_watch_namespace:
           rule_exclusions:
           - option_length_too_long
-      enable_sqxquotehelper:
+      enable_sgxquotehelper:
           rule_exclusions:
           - option_length_too_long
 ...
